# veilguard

./: .env.example  .gitignore  CherryRain_CostEfficiency_Model.xlsx  Dockerfile.librechat  _build_cherry.py  _build_model.py  _make_test_xlsx.py  build_cherry.py  cost_simulation.py  cost_simulation_v2.py  cost_simulation_v3.py  cost_simulation_v5.py  cost_simulation_v6.py  docker-compose.yml  ensure-role-aliases.sh  generate_pdf.py  librechat.yaml  parallel_test.txt  patch-api.sh  setup_lance_indices.py  start-daemon.bat  start-services.sh  start.bat  subagent_test.txt  subagent_test2.txt  subagent_test3.txt  test_anthropic_streaming.py  test_heatmap_streaming.py  test_tcmm.py  threat-report.md  verify_all_fixes.py  verify_recallable.py
.githooks/: pre-commit
agents/: phishing-analyst.md  report-writer.md  threat-analyst.md
brand/: cyber.css
deploy/: Caddyfile
mcp-tools/_shared/: __init__.py  error_hints.py  (+3 more)
mcp-tools/client-daemon/: build.bat  config.yaml.example  installer.iss  publish_release.py  pyproject.toml  setup_server.py  veilguard.spec  veilguard_client.py
mcp-tools/client-daemon/tests/: test_stage1_isolation.py
pii-proxy/: Dockerfile  migrate_audit_log.py  requirements.txt
scripts/: lance_maintenance.py  perf_audit.py  perf_e2e.sh  tcmm_backfill_typed_dicts.py  tcmm_health_pretty.py  tcmm_healthcheck.py  tcmm_latency_summary.py  tcmm_per_user.py  tcmm_perf_trend.py  tcmm_stats.py  tcmm_test_aistudio_ingest.sh  veilguard-tcmm-maintenance.service  veilguard-tcmm-maintenance.timer  veilguard-tcmm-stats.service  veilguard-tcmm-stats.timer
(+125 files in other folders)
