[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veilguard-client"
version = "0.1.0"
description = "Veilguard client daemon — local tool execution for cloud-hosted Veilguard AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Phishield"}]

dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.scripts]
veilguard = "veilguard_client:main"

[tool.setuptools]
py-modules = ["veilguard_client", "setup_server"]
